qtlocation-opensource-src (5.14.2+dfsg-1) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.14.2.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 27 Apr 2020 20:00:22 +0300

qtlocation-opensource-src (5.14.1+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.14.1.
  * Update debian/copyright.
  * Stop installing QGeoPolygonPrivate include in qtpositioning5-dev.
  * Update debian/libqt5location5.symbols from the current build log.
  * Add weatherinfo icons licensing to debian/copyright.
  * Bump Standards-Version to 4.5.0, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 26 Feb 2020 14:31:05 +0300

qtlocation-opensource-src (5.12.5+dfsg-5) unstable; urgency=medium

  * Brow paperbag upload: the last upload should have gone to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 10 Feb 2020 11:19:18 -0300

qtlocation-opensource-src (5.12.5+dfsg-4) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * Fix Mapbox GL build on Hurd, thanks Samuel Thibault (closes: #947735).

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 10 Feb 2020 10:06:57 -0300

qtlocation-opensource-src (5.12.5+dfsg-3) experimental; urgency=medium

  * Ship the Mapbox GL plugin in a separate package (closes: #929842).
    - Replace some bundled dependencies with system packages.
  * Fix build on Hurd, thanks Samuel Thibault (closes: #947735).
  * Bump debhelper compat level to 12, use the new syntax.
  * Split the doxygen .tags files into a new qtlocation5-doc-dev package
    (see #922707).
  * Update descriptions of the documentation packages.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 31 Dec 2019 12:42:59 +0300

qtlocation-opensource-src (5.12.5+dfsg-2) unstable; urgency=medium

  * Bump Standards-Version to 4.4.1, no changes needed.
  * Upload to unstable.
