@@ -9,8 +9,6 @@ Uploaders: Timo Jyrinki <timo@debian.org>,
 Build-Depends: debhelper-compat (= 12),
                libboost-dev,
                libicu-dev,
-               libmapbox-variant-dev (>= 1.1.4),
-               libmapbox-wagyu-dev (>= 0.4.3),
                libprotozero-dev (>= 1.5.2),
                libqt5opengl5-dev (>= 5.14.2+dfsg~),
                pkg-kde-tools,
