@@ -4,6 +4,10 @@ qtlocation-opensource-src (5.14.2+dfsg-1) UNRELEASED; urgency=medium
   * New upstream release.
   * Bump Qt build-dependencies to 5.14.2.
 
+  [ Bas Couwenberg ]
+  * Drop libmapbox-variant-dev & libmapbox-wagyu-dev build dependencies
+    (closes: #952611).
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 27 Apr 2020 20:00:22 +0300
 
 qtlocation-opensource-src (5.14.1+dfsg-1) experimental; urgency=medium
